Added tastypie dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ djangorestframework = "==3.10.3"
 pytz = "==2019.2"
 sqlparse = "==0.3.0"
 Django = "==2.2.5"
+django-tastypie = "*"
+python-mimeparse = "*"
+python-dateutil = "*"
 
 [requires]
-python_version = "3"
+python_version = "3.7"
