--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,27 @@ dmypy.json
 .pyre/
 
 # End of https://www.gitignore.io/api/django
+
+
+.DS_Store
+client/node_modules
+client/dist
+
+# local env files
+client/.env.local
+client/.env.*.local
+
+# Log files
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
+
+# Editor directories and files
+client/.idea
+client/.vscode
+client/*.suo
+client/*.ntvs*
+client/*.njsproj
+client/*.sln
+client/*.sw?
+
