--- a/django/Pipfile
+++ b/django/Pipfile
@@ -13,6 +13,7 @@ Django = "==2.2.5"
 django-tastypie = "*"
 python-mimeparse = "*"
 python-dateutil = "*"
+django-polymorphic = "*"
 
 [requires]
 python_version = "3.7"
