--- a/django/Pipfile
+++ b/django/Pipfile
@@ -14,6 +14,7 @@ django-tastypie = "*"
 python-mimeparse = "*"
 python-dateutil = "*"
 django-polymorphic = "*"
+django-webpack-loader = "*"
 
 [requires]
 python_version = "3.7"
