updates to the API sandbox testing the cross-origin requests

--- a/django/Pipfile
+++ b/django/Pipfile
@@ -15,6 +15,7 @@ python-mimeparse = "*"
 python-dateutil = "*"
 django-polymorphic = "*"
 djangorestframework-simplejwt = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
